--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
+    "multer": "1.4.5-lts.1",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.11",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
