--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "5.17.0",
     "@types/bcrypt": "^5.0.2",
