--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "~1.4.6",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
-    "express": "~4.16.1",
+    "express": "~4.16.4",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
@@ -29,11 +29,15 @@
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.14.11",
+    "@types/node": "^20.14.13",
+    "eslint": "~9.8.0",
+    "globals": "^15.8.0",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.18.0"
   }
 }
